# Symphonia

./: CMakeLists.txt  README.md
lib/: Game.cpp  Game.h  Screen.h
lib/ui/: Button.cpp  Button.h  Node.cpp  Node.h  Text.cpp  Text.h
src/: main.cpp
src/example_screens/: ButtonExample.cpp  ButtonExample.h  TextExample.cpp  TextExample.h
src/screens/: TitleScreen.cpp  TitleScreen.h
tests/: CMakeLists.txt  Node.cpp
